Fix BookDetailPanel stretching full-width over map
The .map-container > div CSS rule was matching all direct div children,
including BookDetailPanel, forcing it to 100% width/height. Scoped the
rule to .map-svg-wrapper class on MapView's container div only.

--- a/src/index.css
+++ b/src/index.css
@@ -56,20 +56,20 @@ body {
   position: relative;
 }
 
-.map-container > div {
+.map-container > .map-svg-wrapper {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-.map-container > div > svg {
+.map-container > .map-svg-wrapper > svg {
   display: block;
   width: 100%;
   height: 100%;
   cursor: grab;
 }
 
-.map-container > div > svg:active {
+.map-container > .map-svg-wrapper > svg:active {
   cursor: grabbing;
 }
 
